styles/main-navigation.css
.main-navigation {
    width: 100%;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    background: rgba(0, 0, 0, 0.5);
    padding: 20px;
    display: flex;
    z-index: 1;
}
.main-navigation__inner {
    max-width: 1350px;
    margin: 0 auto;
    display: flex;
    align-items: center;
    justify-content: space-between;
}
.main-navigation__logo {
    margin: 0;
}
.main-navigation__logo-image {
    width: 70px;
    margin-right: 20px;
}
.main-navigation__menu {
    display: flex;
    margin: 0 auto;
    list-style: none;
    /* align-items: center; */
    transition: 0.5s;
    transition-property: opacity, transform;
}
.main-navigation__menu-item {
    margin-left: 40px;
}
.main-navigation__logo-link, .main-navigation__link {
    display: flex;
    align-items: center;
    text-decoration: none;
    color: #FFF;
}
.main-navigation__logo-link {
    font-size: 35px;
}
.main-navigation__link {
    text-transform: uppercase;
    font-weight: bold;
    padding: 5px 0;
    position: relative;
}
.main-navigation__link:hover {
    border-bottom: 2px solid #FFF;
}
.main-navigation__menu-button {
    display: none;
}

@media (min-width: 1061px) and (max-width: 1160px) {
    .main-navigation__menu-item {
        margin-left: 25px;
    }
}
@media (max-width: 1060px) {
    .main-navigation__logo-link {
        font-size: 30px;
    }
    .main-navigation__logo-image {
        width: 50px;
    }
    .main-navigation__menu {
        position: fixed;
        top: 0;
        left: 0;
        margin: 0;
        padding: 0;
        width: 100%;
        height: 100%;
        background: #000;
        display: flex;
        justify-content: center;
        flex-direction: column;
        align-items: center;
        opacity: 0;
        pointer-events: none;
        transform: translateY(-50%);
    }
    .main-navigation__menu--open {
        opacity: 1;
        pointer-events: unset;
        transform: unset;
    }
    .main-navigation__menu-item {
        margin: 0;
    }
    .main-navigation__link {
        font-size: 22px;
    }
    .main-navigation__link:hover {
        border-bottom: unset;
    }
    .main-navigation__menu-button {
        display: unset;
        background: none;
        border: none;
        outline: none;
        padding: 0;
        cursor: pointer;
    }
    .main-navigation__menu-button-image {
        display: block;
        width: 25px;
    }
}

